# Advent-of-Code-2025

./: .gitignore  README.md  pyproject.toml
src/: main.py  template.py
src/day_01/: solution.py
src/day_02/: solution.py
src/day_03/: solution.py
src/day_04/: solution.py
src/day_05/: solution.py
src/day_06/: solution.py
src/day_07/: solution.py
src/day_08/: solution.py
src/day_09/: solution.py
src/day_10/: solution.py
src/util/: general_util.py
